# tur-agent

./: .gitignore  docker-compose.yml
backend/: auth.py  city.py  country.py  employee.py  hotel.py  main.py  models.py  permissions.py  pyproject.toml  tour.py  tour_type.py
backend/alembic/: env.py
backend/alembic/versions/: 451e07153416_create_all_tables.py  8785c49392fb_add_relationship_between_employee_and_.py  ed0a15432624_add_fields_in_user_model.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: AdminPage.jsx  CityAdminForm.jsx  CityAdminPage.jsx  CountriesAdminFormPage.jsx  CountriesAdminPage.jsx  EmployeeAdminForm.jsx  EmployeeAdminPage.jsx  HotelsAdmiPage.jsx  HotelsForm.jsx  Layout.jsx  LoginPage.jsx  MainPage.jsx  SearchForm.jsx  Testimonials.jsx  TourForm.jsx  TourTypeForm.jsx  TourTypeList.jsx  ToursAdminPage.jsx  ToursSearchPage.jsx  WhyChooseUs.jsx
frontend/src/services/: api.js  authService.js  cityService.js  countryService.js  employeeService.js  hotelService.js  tourService.js  tourTypeService.js
frontend/src/stores/: userStore.js
